# dogbreed

./: .coverage  .env  .gitignore  conftest.py  pyproject.toml  requirements.txt
Main/: generate_alignment_input.py  generate_dog_sequences.fasta  generate_phylogenetic_tree2.py  local_breed_lookup.csv  main.py  replace_ids_with_breed_names.py  update_breeds.py  utils.py
README/: LICENSE  README.md
Results/: phylogenetic_tree.nwk
SRC/dogbreed/: cli.py  compare_sequences.py  dog_breed_identifier.py  generate_alignment_input.py  generate_phylogenetic_tree.py  phylogenetic_tree.py  update_breeds.py  utils.py
Tests/: conftest.py  pytest.ini  test_compare_sequences.py  test_dog_breed_identifier.py  test_generate_alignment_input.py  test_generate_phylogenetic_tree.py  test_update_breeds.py  test_utils.py  test_utils_all.py
data/: alignment_input.fasta  breed_mapping.csv  dog_sequences.aln  dog_sequences.dnd  dog_sequences.fa  dog_sequences_named.aln  dog_sequences_named.dnd  dog_sequences_named.fa  mystery_breed.fasta  test_sequence.fa
data/fasta_files/: AY656744.fasta  CM023446.fasta  MW916023.fasta
